# codex-video-use

./: .gitignore  README.md  install.md  pyproject.toml
.github/workflows/: ci.yml
skills/codex-video-use/: SKILL.md
skills/codex-video-use/agents/: openai.yaml
src/codex_video_use/: __init__.py  cli.py  grading.py  packing.py  rendering.py  syncer.py  timeline.py  transcription.py  utils.py
sync/: upstream-map.yaml  upstream-state.json
tests/: test_packing.py  test_render_smoke.py  test_rendering.py  test_subtitles.py  test_sync.py
tests/fixtures/: transcript_sample.json
